//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./protos_object_beans";

import "object_base.proto";
import "object_order_base.proto";

message ObjectShareboxOrder {
  ObjectBase     Base                  =1;  //
  ObjectOrderBase    OrderBase         =2; //
}